Resolve exercício 4 Utiliza 'align-self' para ajustar os elementos da nav

--- a/m1: Fundamentos/Bloco 6 - HTML e CSS: Forms, Flexbox e Responsivo/04: CSS Flexbox - Parte 2/style.css
+++ b/m1: Fundamentos/Bloco 6 - HTML e CSS: Forms, Flexbox e Responsivo/04: CSS Flexbox - Parte 2/style.css
@@ -46,4 +46,5 @@
     font-size: 1.3rem;
     list-style: none;
     margin-right: 10px;
+    align-self: center;
   }
